# postgres_proj

./: README.md  pyproject.toml
postgres_proj/: insert_data.py  insert_movies.py
postgres_proj/tool/: utils.py
res/: database.yml
res/movies/2010/: harry-potter-and-the-deathly-hallows-part-1.json
